Finished cards in project section. Need to fix backside 'source code' button alignment.

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -35,6 +35,17 @@
         }
     }
 
+    &--blue{
+        background-color: $color-primary;
+        color: $color-white;
+        &::after{
+            background-color: $color-white;
+        }
+        &:not(:last-child){
+            margin-right: 2rem;
+        }
+    }
+
     &::after{
         content: "";
         display: inline-block;
